feat: revamp docs and web app home pages with detailed monorepo information and updated navigation.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -80,6 +80,7 @@
   "exports": {
     "./globals.css": "./src/styles/globals.css",
     "./postcss.config": "./postcss.config.mjs",
+    "./button": "./src/components/atoms/button/index.ts",
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
     "./hooks/*": "./src/hooks/*.ts"
