--- a/apps/web-builder/package.json
+++ b/apps/web-builder/package.json
@@ -11,10 +11,22 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.75",
+    "@ai-sdk/react": "^2.0.104",
+    "@craftjs/core": "^0.2.12",
+    "@craftjs/layers": "^0.2.7",
     "@labs/ui": "workspace:*",
+    "ai": "^5.0.104",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "next": "^16.0.1",
+    "openai": "^6.9.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-colorful": "^5.6.1",
+    "react-contenteditable": "^3.3.7",
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.0.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@labs/eslint-config": "workspace:*",
@@ -22,7 +34,9 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.9.2"
   }
 }
