feat(docs): implement advanced theme switcher, customizer, code view & playground
- Added Sheet-based theme customizer with Mode, Color, Dual Tone, and Typography options
- Implemented ComponentPreview with Preview/Code tabs for all atom components
- Added interactive Playground for Button component with variant, size, and state controls
- Enhanced all atom component docs (Button, Avatar, Badge, Separator, Skeleton, Spinner, Toggle, Typography)
- Exported Tabs, Sheet, Checkbox, Input, Label, RadioGroup from @labs/ui
- Added font classes (Inter, Manrope, System) and theme classes to globals.css
- Simplified ModeToggle to direct Light/Dark toggle

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -81,6 +81,23 @@
     "./globals.css": "./src/styles/globals.css",
     "./postcss.config": "./postcss.config.mjs",
     "./button": "./src/components/atoms/button/index.ts",
+    "./avatar": "./src/components/atoms/avatar/index.ts",
+    "./badge": "./src/components/atoms/badge/index.ts",
+    "./separator": "./src/components/atoms/separator/index.ts",
+    "./skeleton": "./src/components/atoms/skeleton/index.ts",
+    "./spinner": "./src/components/atoms/spinner/index.ts",
+    "./toggle": "./src/components/atoms/toggle/index.ts",
+    "./typography": "./src/components/atoms/typography/index.ts",
+    "./dropdown-menu": "./src/components/navigation/dropdown-menu/index.ts",
+    "./sheet": "./src/components/feedback/sheet/index.ts",
+    "./tabs": "./src/components/navigation/tabs/index.ts",
+    "./checkbox": "./src/components/forms/checkbox/index.ts",
+    "./input": "./src/components/forms/input/index.ts",
+    "./label": "./src/components/forms/label/index.ts",
+    "./radio-group": "./src/components/forms/radio-group/index.ts",
+    "./accordion": "./src/components/molecules/accordion/index.ts",
+    "./alert": "./src/components/molecules/alert/index.ts",
+    "./card": "./src/components/molecules/card/index.ts",
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
     "./hooks/*": "./src/hooks/*.ts"
