--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,9 +12,16 @@
   },
   "dependencies": {
     "@labs/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.0.8",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "next": "^16.0.1",
+    "next-themes": "^0.4.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.8",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@labs/eslint-config": "workspace:*",
