docs(feedback): complete Feedback category documentation
- Added docs for AlertDialog, Dialog, Progress, and Sonner
- Exported Feedback components from @labs/ui
- Updated sidebar navigation with all Feedback components
- Fixed syntax error in Progress component
- All Feedback category components now have ComponentPreview integration

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -102,6 +102,10 @@
     "./hover-card": "./src/components/molecules/hover-card/index.ts",
     "./popover": "./src/components/molecules/popover/index.ts",
     "./tooltip": "./src/components/molecules/tooltip/index.ts",
+    "./alert-dialog": "./src/components/feedback/alert-dialog/index.ts",
+    "./dialog": "./src/components/feedback/dialog/index.ts",
+    "./progress": "./src/components/feedback/progress/index.ts",
+    "./sonner": "./src/components/feedback/sonner/index.ts",
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
     "./hooks/*": "./src/hooks/*.ts"
