docs(forms): complete Forms category documentation
- Added docs for Select, Switch, Slider, Textarea
- Added docs for ToggleGroup, InputOTP, Combobox, DatePicker, Form
- Exported all Forms components from @labs/ui
- Updated sidebar navigation with all Forms components
- Updated components overview page to mark Feedback as complete and Forms as in-progress
- All Forms category components now have ComponentPreview integration

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -106,6 +106,15 @@
     "./dialog": "./src/components/feedback/dialog/index.ts",
     "./progress": "./src/components/feedback/progress/index.ts",
     "./sonner": "./src/components/feedback/sonner/index.ts",
+    "./combobox": "./src/components/forms/combobox/index.ts",
+    "./date-picker": "./src/components/forms/date-picker/index.ts",
+    "./form": "./src/components/forms/form/index.ts",
+    "./input-otp": "./src/components/forms/input-otp/index.ts",
+    "./select": "./src/components/forms/select/index.ts",
+    "./slider": "./src/components/forms/slider/index.ts",
+    "./switch": "./src/components/forms/switch/index.ts",
+    "./textarea": "./src/components/forms/textarea/index.ts",
+    "./toggle-group": "./src/components/forms/toggle-group/index.ts",
     "./lib/*": "./src/lib/*.ts",
     "./components/*": "./src/components/*.tsx",
     "./hooks/*": "./src/hooks/*.ts"
