--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@labs/ui": "workspace:*",
+    "@labs/utils": "workspace:*",
     "@tailwindcss/postcss": "^4.0.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
