feat: Introduce new authentication package and service with database logging and documentation.

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@labs/ui": "workspace:*",
     "@labs/utils": "workspace:*",
+    "@labs/auth": "workspace:*",
     "@tailwindcss/postcss": "^4.0.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
