--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev": "turbo dev",
+    "dev:auth": "pnpm dev --filter=auth-app --filter=auth-service",
+    "dev:docs": "pnpm dev --filter=docs",
+    "dev:web": "pnpm dev --filter=web",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo check-types",
+    "clean": "turbo clean"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
