--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,7 +2,11 @@
     "name": "@labs/auth",
     "version": "0.1.0",
     "main": "./src/index.ts",
-    "types": "./src/index.ts",
+    "exports": {
+        ".": "./src/index.ts",
+        "./client": "./src/client/index.ts",
+        "./adapters": "./src/adapters/index.ts"
+    },
     "license": "MIT",
     "scripts": {
         "lint": "eslint .",
