--- a/services/auth/tsconfig.json
+++ b/services/auth/tsconfig.json
@@ -1,19 +1,14 @@
 {
-  "extends": "@labs/typescript-config/nextjs.json",
+  "extends": "@labs/typescript-config/base.json",
   "compilerOptions": {
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
+    "outDir": "dist",
+    "rootDir": "src",
+    "target": "es2020",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "strict": true
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
