feat: Implement core authentication service with tenant configuration and accounts database schema.

--- a/services/auth/tsconfig.json
+++ b/services/auth/tsconfig.json
@@ -4,8 +4,8 @@
     "outDir": "dist",
     "rootDir": "src",
     "target": "es2020",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "strict": true
   },
