--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,10 +14,10 @@
         "build": "tsc"
     },
     "dependencies": {
-        "zod": "^3.23.8",
-        "jose": "^5.2.0",
         "@labs/database": "workspace:*",
-        "drizzle-orm": "^0.36.4"
+        "drizzle-orm": "^0.33.0",
+        "jose": "^5.2.0",
+        "zod": "^3.23.8"
     },
     "peerDependencies": {
         "react": ">=18"
