--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,33 +1,33 @@
 {
     "name": "@labs/auth",
-    "version": "0.1.0",
-    "main": "./src/index.ts",
-    "exports": {
-        ".": "./src/index.ts",
-        "./client": "./src/client/index.ts",
-        "./adapters": "./src/adapters/index.ts"
-    },
-    "license": "MIT",
+    "version": "0.0.1",
+    "description": "Authentication SDK inspired by Firebase",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "source": "src/index.ts",
     "scripts": {
-        "lint": "eslint .",
-        "check-types": "tsc --noEmit",
-        "build": "tsc"
+        "build": "tsc",
+        "dev": "tsc -w",
+        "clean": "rm -rf dist",
+        "lint": "eslint src/"
     },
+    "keywords": [
+        "auth",
+        "sdk",
+        "authentication"
+    ],
+    "author": "RJ Suite",
+    "license": "MIT",
     "dependencies": {
-        "@labs/database": "workspace:*",
-        "drizzle-orm": "^0.33.0",
-        "jose": "^5.2.0",
-        "zod": "^3.23.8"
+        "zod": "^3.22.0"
     },
     "peerDependencies": {
-        "react": ">=18"
+        "react": ">=18",
+        "react-dom": ">=18"
     },
     "devDependencies": {
-        "@labs/eslint-config": "workspace:*",
-        "@labs/typescript-config": "workspace:*",
-        "@types/node": "^22.15.3",
-        "@types/react": "^19.0.0",
-        "typescript": "5.9.2"
+        "@types/react": "^18.2.0",
+        "typescript": "^5.0.0"
     },
     "publishConfig": {
         "access": "public"
