feat: Implement Drizzle ORM adapter and introduce multi-tenancy support to the authentication module.

--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,16 +1,11 @@
 {
+  "extends": "@labs/typescript-config/base.json",
   "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
-    "lib": ["dom", "esnext"],
-    "declaration": true,
-    "sourceMap": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "jsx": "react"
+    "outDir": "dist",
+    "rootDir": "src",
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
