feat: Integrate new `@labs/auth` SDK with DrizzleAdapter and enhance login endpoint with tenant ID support.

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -4,6 +4,11 @@
     "description": "Authentication SDK inspired by Firebase",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "exports": {
+        ".": "./dist/index.js",
+        "./adapters": "./dist/adapters/index.js",
+        "./types": "./dist/types/index.js"
+    },
     "source": "src/index.ts",
     "scripts": {
         "build": "tsc",
