--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -11,7 +11,9 @@
     "lib": ["dom", "dom.iterable", "esnext"],
 
 
-    "skipLibCheck": true
+
+    "skipLibCheck": true,
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
