feat: Add comprehensive password policy configuration UI and validation logic.

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -8,6 +8,7 @@
         ".": "./dist/index.js",
         "./adapters": "./dist/adapters/index.js",
         "./types": "./dist/types/index.js",
+        "./password-policy": "./dist/core/password-policy.js",
         "./client": "./dist/ui/index.js"
     },
     "source": "src/index.ts",
