feat: Introduce `@labs/utils` storage utility and migrate auth components to use it for consistent local storage operations.

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -12,6 +12,7 @@
         "@labs/auth": "workspace:*",
         "@labs/database": "workspace:*",
         "@labs/ui": "workspace:*",
+        "@labs/utils": "workspace:*",
         "@tailwindcss/postcss": "^4.0.8",
         "clsx": "^2.1.1",
         "lucide-react": "^0.475.0",
