--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -23,6 +23,7 @@
         "./types": "./src/types/index.ts"
     },
     "scripts": {
+        "build": "tsc --noEmit",
         "lint": "eslint . --max-warnings 0",
         "check-types": "tsc --noEmit"
     },
