--- a/apps/auth/.env.example
+++ b/apps/auth/.env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_AUTH_API_URL=http://localhost:3002/api/auth
 NEXT_PUBLIC_DEFAULT_TENANT_ID=acme-corp
+NEXT_PUBLIC_AUTH_DOCS_URL=http://localhost:3001/docs/auth
