--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -42,5 +42,8 @@
         "@labs/eslint-config": "workspace:*",
         "@labs/typescript-config": "workspace:*",
         "typescript": "^5.9.2"
+    },
+    "dependencies": {
+        "moment": "^2.30.1"
     }
 }
