--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -21,7 +21,8 @@
         "react-dom": "^19.2.1",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.8",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@labs/eslint-config": "workspace:*",
@@ -29,6 +30,7 @@
         "@types/node": "^20.0.0",
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
+        "@types/uuid": "^11.0.0",
         "typescript": "^5.0.0"
     }
 }
