--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -14,11 +14,14 @@
         "@labs/ui": "workspace:*",
         "@labs/utils": "workspace:*",
         "@tailwindcss/postcss": "^4.0.8",
+        "@types/d3-scale": "^4.0.9",
         "clsx": "^2.1.1",
+        "d3-scale": "^4.0.2",
         "lucide-react": "^0.475.0",
         "next": "^16.0.7",
         "react": "^19.2.1",
         "react-dom": "^19.2.1",
+        "react-simple-maps": "^3.0.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.8",
         "tailwindcss-animate": "^1.0.7",
@@ -30,6 +33,7 @@
         "@types/node": "^20.0.0",
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
+        "@types/react-simple-maps": "^3.0.6",
         "@types/uuid": "^11.0.0",
         "typescript": "^5.0.0"
     }
