--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "tsx watch src/server.ts",
-        "build": "tsc",
+        "build": "tsc --noEmit",
         "start": "tsx src/server.ts",
         "lint": "eslint ."
     },
@@ -15,6 +15,7 @@
         "@labs/database": "workspace:*",
         "@scalar/hono-api-reference": "^0.5.165",
         "bcryptjs": "^3.0.3",
+        "drizzle-orm": "^0.33.0",
         "hono": "^4.6.14",
         "zod": "3.23.8"
     },
