--- a/services/auth/vercel.json
+++ b/services/auth/vercel.json
@@ -1,6 +1,5 @@
 {
     "buildCommand": "pnpm build",
     "devCommand": "pnpm dev",
-    "installCommand": "pnpm install",
-    "outputDirectory": "dist"
+    "installCommand": "pnpm install"
 }
