--- a/services/auth/vercel.json
+++ b/services/auth/vercel.json
@@ -1,5 +1,11 @@
 {
     "buildCommand": "pnpm build",
     "devCommand": "pnpm dev",
-    "installCommand": "pnpm install"
+    "installCommand": "pnpm install",
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/api/index"
+        }
+    ]
 }
