--- a/services/playground/package.json
+++ b/services/playground/package.json
@@ -3,17 +3,17 @@
     "version": "0.0.1",
     "private": true,
     "type": "module",
-    "scripts": {
-        "dev": "tsx watch src/server.ts",
-        "start": "tsx src/server.ts"
-    },
-    "dependencies": {
-        "@hono/node-server": "^1.13.7",
-        "hono": "^4.6.14"
-    },
-    "devDependencies": {
-        "@types/node": "^22.10.2",
-        "tsx": "^4.19.2",
-        "typescript": "^5.7.2"
-    }
+    "dev": "tsx watch src/server.ts",
+    "start": "tsx src/server.ts",
+    "build": "tsc"
+},
+"dependencies": {
+    "@hono/node-server": "^1.13.7",
+    "hono": "^4.6.14"
+},
+"devDependencies": {
+    "@types/node": "^22.10.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
+}
 }
