fix: Move turbo to dependencies to fix production build

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "check-types": "turbo check-types",
     "clean": "turbo clean"
   },
+  "dependencies": {
+    "turbo": "^2.6.1"
+  },
   "devDependencies": {
     "prettier": "^3.6.2",
-    "turbo": "^2.6.1",
     "typescript": "5.9.2"
   },
   "packageManager": "pnpm@9.0.0",
