--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -40,10 +40,10 @@
     "license": "MIT",
     "devDependencies": {
         "@labs/eslint-config": "workspace:*",
-        "@labs/typescript-config": "workspace:*",
         "typescript": "^5.9.2"
     },
     "dependencies": {
-        "moment": "^2.30.1"
+        "moment": "^2.30.1",
+        "@labs/typescript-config": "workspace:*"
     }
 }
