fix: Move build-time dependencies to dependencies for Render

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -28,7 +28,8 @@
     "dependencies": {
         "zod": "^3.22.0",
         "@labs/database": "workspace:*",
-        "@labs/utils": "workspace:*"
+        "@labs/utils": "workspace:*",
+        "@labs/typescript-config": "workspace:*"
     },
     "peerDependencies": {
         "react": ">=18",
