--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -19,7 +19,8 @@
         "drizzle-orm": "^0.33.0",
         "hono": "^4.6.14",
         "tsx": "^4.19.2",
-        "zod": "3.23.8"
+        "zod": "3.23.8",
+        "dotenv": "^16.4.5"
     },
     "devDependencies": {
         "@labs/eslint-config": "workspace:*",
