feat: Implement authentication integration with dedicated logout and callback pages, add platform navbar, and remove various documentation files.

--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@labs/auth": "workspace:*",
     "@labs/ui": "workspace:*",
+    "@labs/utils": "workspace:*",
     "@tailwindcss/postcss": "^4.0.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
